[gd_scene load_steps=16 format=2]

[ext_resource path="res://Enemies/snowman.gd" type="Script" id=1]
[ext_resource path="res://Enemies/sprites/sprite_64px.png" type="Texture" id=2]
[ext_resource path="res://Enemies/EnemyFSM.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 128, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 192, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 128, 64, 64, 64 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": false,
"name": "die",
"speed": 10.0
}, {
"frames": [ SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": false,
"name": "getHit",
"speed": 7.0
} ]

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 14.8297, 21.781 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 34.0057, 35.8113 )

[node name="Snowman" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 2147483653
script = ExtResource( 1 )

[node name="Body" type="Node2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="Body"]
position = Vector2( -2.20488, -0.396832 )
scale = Vector2( 1.02153, 1.1298 )
frames = SubResource( 7 )
animation = "idle"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2.08425, 16.0448 )
shape = SubResource( 8 )

[node name="player_checker_right" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 300, 0 )
collide_with_areas = true

[node name="player_checker_left" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -300, 0 )
collide_with_areas = true

[node name="floor_checker" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 70 )
collision_mask = 2
collide_with_areas = true

[node name="hit_checker" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="hit_checker"]
position = Vector2( -1.34273, -3.94267 )
shape = SubResource( 9 )

[node name="Receive_hit" type="Timer" parent="."]
one_shot = true

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Enemy_UI" type="VBoxContainer" parent="."]
margin_left = -62.0
margin_top = -72.0
margin_right = 63.0
margin_bottom = -40.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="State_Info" type="Label" parent="Enemy_UI"]
margin_right = 125.0
margin_bottom = 14.0
text = "idle"
align = 1

[node name="Life_Info" type="Label" parent="Enemy_UI"]
margin_top = 18.0
margin_right = 125.0
margin_bottom = 32.0
text = "1000"
align = 1
[connection signal="body_entered" from="hit_checker" to="." method="_on_hit_checker_body_entered"]
[connection signal="timeout" from="Receive_hit" to="." method="_on_Receive_hit_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
